swiper fix (overflow)

--- a/src/static/style.scss
+++ b/src/static/style.scss
@@ -811,8 +811,8 @@ footer {
   padding: 4% 0 0 0 !important;
   margin-left: -5% !important;
   margin-top: -3% !important;
-  width: 110% !important;
-  max-width: 110% !important;
+  width: 106% !important;
+  max-width: 106% !important;
 }
 
 .swiper-button-prev {
